--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Keilani Li</h1>
-    <p>hi my name is snapple</p>
+    <p>hi my name is snapple. my background consists of watermelon and lemonade.
+        the longer u open this door the more my temperature go up and im not drinkable no more.
+        close the god dang door!
+    </p>
+
+    <img src = "/images/snapple.png" alt = "snapple bottle" width = "500" height = "600">
 </body>
 </html>
