--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         close the god dang door!
     </p>
 
-    <img src = "/images/snapple.png" alt = "snapple bottle" width = "500" height = "600">
+    <img src = "images/snapple.png" alt = "snapple bottle" width = "500" height = "600">
 </body>
 </html>
