--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         close the god dang door!
     </p>
 
-    <img src = "images/snapple.png" alt = "snapple bottle" width = "50" height = "500">
+    <img src = "images/snapple.png" alt = "snapple bottle">
 </body>
 </html>
