bunny pic + updated bio

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <h1>Keilani Li</h1>
-    <p>hi my name is snapple. my background consists of watermelon and lemonade.
-        the longer u open this door the more my temperature go up and im not drinkable no more.
-        close the god dang door!
+    <p>Hi! I am a 4th year data science major at UC San Diego. I like bunnies and capybaras, and my
+        favorite hobby is playing games like Valorant, MapleStory, and Hollow Knight.
     </p>
 
-    <img src = "images/snapple.png" alt = "snapple bottle" width = "100" height = "100">
+    <img src = "images/bunny.jpg" alt = "floppy-eared bunny laying down">
 </body>
 </html>
