--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Keilani Li</h1>
+
+    <nav>
+        <a href = "/projects/">Projects</a>
+        <a href = "/contact/">Contact</a>
+        <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
+    </nav>
+
     <p>Hi! I am a 4th year data science major at UC San Diego. I like bunnies and capybaras, and my
         favorite hobby is playing games like Valorant, MapleStory, and Hollow Knight.
     </p>
