--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Keilani Li</h1>
 
     <nav>
-        <a href = "/projects/">Projects</a>
-        <a href = "/contact/">Contact</a>
+        <a href = "https://keil4ni.github.io/portfolio/projects/index.html">Projects</a>
+        <a href = "https://keil4ni.github.io/portfolio/contact/index.html">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
     </nav>
 
