--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Keilani Li</h1>
 
     <nav>
+        <a href = "https://keil4ni.github.io/portfolio/">Home</a>
         <a href = "https://keil4ni.github.io/portfolio/projects/index.html">Projects</a>
         <a href = "https://keil4ni.github.io/portfolio/contact/index.html">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
