--- a/projects/index.html
+++ b/projects/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keilani Li: Projects</title>
+    <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
     <h1>Projects</h1>
+
+    <nav>
+        <a href = "https://keil4ni.github.io/portfolio/">Home</a>
+        <a href = "https://keil4ni.github.io/portfolio/projects/index.html">Projects</a>
+        <a href = "https://keil4ni.github.io/portfolio/contact/index.html">Contact</a>
+        <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
+    </nav>
+
     <p>testing</p>
 </body>
 </html>
