--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <nav>
         <a href = "https://keil4ni.github.io/portfolio/">Home</a>
-        <a href = "https://keil4ni.github.io/portfolio/projects/index.html">Projects</a>
-        <a href = "https://keil4ni.github.io/portfolio/contact/index.html">Contact</a>
+        <a href = "https://keil4ni.github.io/portfolio/projects/">Projects</a>
+        <a href = "https://keil4ni.github.io/portfolio/contact/">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
     </nav>
 
