--- a/contact/index.html
+++ b/contact/index.html
@@ -10,9 +10,9 @@
     <h1>Contact</h1>
 
     <nav>
-        <a href = "https://keil4ni.github.io/portfolio/">Home</a>
-        <a href = "https://keil4ni.github.io/portfolio/projects/">Projects</a>
-        <a href = "https://keil4ni.github.io/portfolio/contact/">Contact</a>
+        <a href = "portfolio/index.html">Home</a>
+        <a href = "projects/index.html">Projects</a>
+        <a href = "contact/index.html">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
     </nav>
 
