--- a/contact/index.html
+++ b/contact/index.html
@@ -16,6 +16,10 @@
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
     </nav>
 
-    <p>testing</p>
+    <form>
+        action = "mailto:knli@ucsd.edu"
+        method = "POST"
+        enctype = "text/plain"
+    </form>
 </body>
 </html>
