fixed the nav tag again

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Keilani Li</h1>
 
     <nav>
-        <a href = "portfolio/index.html">Home</a>
-        <a href = "projects/index.html">Projects</a>
-        <a href = "contact/index.html">Contact</a>
+        <a href = "../portfolio/index.html">Home</a>
+        <a href = "../projects/index.html">Projects</a>
+        <a href = "../contact/index.html">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
     </nav>
 
