--- a/contact/index.html
+++ b/contact/index.html
@@ -17,16 +17,18 @@
     </nav>
 
     <form action = "mailto:knli@ucsd.edu" method = "POST" enctype = "text/plain">
-        <label for = "email">Email</label>
+        <br>
+        <label for = "email">Email: </label>
         <input type = "email" name = "email">
         <br>
         <br>
-        <label for = "subject">Subject</label>
+        <label for = "subject">Subject: </label>
         <input name = "subject">
         <br>
         <br>
-        <label for = "body">Body</label>
+        <label for = "body">Body: </label>
         <textarea name = "body"></textarea>
+        <button>Submit</button>
     </form>
 </body>
 </html>
