added nav tag to all index files

--- a/projects/index.html
+++ b/projects/index.html
@@ -14,6 +14,7 @@
         <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
         <a href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
+        <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
     </nav>
 
     <p>testing</p>
