--- a/resume/index.html
+++ b/resume/index.html
@@ -7,6 +7,14 @@
     <link rel = "stylesheet" href = "../style.css">
 </head>
 <body>
+    <nav>
+        <a href = "https://keil4ni.github.io/portfolio/">Home</a>
+        <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
+        <a href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
+        <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
+        <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
+    </nav>
+    
     <h1>Keilani Li</h1>
 
     <h2>Experience</h2>
@@ -17,7 +25,7 @@
         <li>Utilized Twilio to send SMS notifications and images to company employees if flare is identified unlit</li>
         <li>Deployed project into APK file with Expo</li>
     </ul>
-    
+
     <h2>Skills</h2>
 
     <h2>Projects</h2>
