--- a/contact/index.html
+++ b/contact/index.html
@@ -14,6 +14,7 @@
         <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
         <a href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
+        <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
     </nav>
 
     <form action = "mailto:knli@ucsd.edu" method = "POST" enctype = "text/plain">
