--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
         <a href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
+        <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
     </nav>
 
     <p>Hi! I am a 4th year data science major at UC San Diego. I like bunnies and capybaras, and my
