--- a/resume/index.html
+++ b/resume/index.html
@@ -27,9 +27,24 @@
     </ul>
 
     <h2>Skills</h2>
-
+    <ul>
+        <li>Programming Languages: Python, R, SQL</li>
+        <li>Machine Learning Algorithms: supervised learning (K-Nearest Neighbors, 
+            linear regression, random forests, decision trees), unsupervised learning (clustering)</li>
+        <li>Familiarity with: AWS, Tableau, Microsoft Excel, C++, Java</li>
+        <li>Quick learner and adapter</li>
+        <li>Work well independently or in teams</li>
+        <li>Detail-oriented</li>
+        <li>Highly organized</li>
+    </ul>
     <h2>Projects</h2>
-
+    <h3><a href = "https://keil4ni.github.io/recipe-analysis/"></a>Recipe Length Analysis</h3>
+    <p><i>Data Scientist</i></p>
+    <ul>
+        <li>Used Python to clean and analyze a recipe dataset from food.com</li>
+        <li>Performed permutation tests on missing values and fairness</li>
+        <li>Build a Random Forests Regression model to predict recipe length based on number of steps</li>
+    </ul>
     <h2>Education</h2>
 
 </body>
