--- a/resume/index.html
+++ b/resume/index.html
@@ -18,7 +18,8 @@
     <h1>Keilani Li</h1>
 
     <h2>Experience</h2>
-    <h3>Incubator Program</h3>
+    <hr>
+    <h3>Incubator Program <span class='spacer'></span> Sept 2022 &mdash; Nov 2022</h3>
     <ul>
         <li>Compiled, trained, tested hundreds of images for dataset with Roboflow</li>
         <li>Classified real-time photos with Roboflow's pretrained computer vision model</li>
@@ -27,6 +28,7 @@
     </ul>
 
     <h2>Skills</h2>
+    <hr>
     <ul>
         <li>Programming Languages: Python, R, SQL</li>
         <li>Machine Learning Algorithms: supervised learning (K-Nearest Neighbors, 
@@ -37,15 +39,29 @@
         <li>Detail-oriented</li>
         <li>Highly organized</li>
     </ul>
+
     <h2>Projects</h2>
-    <h3><a href = "https://keil4ni.github.io/recipe-analysis/"></a>Recipe Length Analysis</h3>
+    <hr>
+    <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a> 
+        <span class='spacer'></span> May 2025 &mdash; June 2025</h3>
     <p><i>Data Scientist</i></p>
     <ul>
         <li>Used Python to clean and analyze a recipe dataset from food.com</li>
         <li>Performed permutation tests on missing values and fairness</li>
         <li>Build a Random Forests Regression model to predict recipe length based on number of steps</li>
     </ul>
-    <h2>Education</h2>
 
+    <h2>Education</h2>
+    <hr>
+    <h3><strong>University of California, San Diego</strong> <span class='spacer'></span> Expected 2027</h3>
+    <ul>
+        <li>Data Science, B.S</li>
+        <li>Minor: Business Analytics</li>
+    </ul>
+    <h3><strong>De Anza College</strong> <span class='spacer'></span> June 2022 &mdash; June 2024</h3>
+    <ul>
+        <li>Mathematics, AS-T</li>
+        <li>GPA: 3.82</li>
+    </ul>
 </body>
 </html>
