--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
 
     <h2>Experience</h2>
     <hr>
-    <h3>Incubator Program <span class='spacer'></span> Sept 2022 &mdash; Nov 2022</h3>
+    <h3>Incubator Program</h3>
     <ul>
         <li>Compiled, trained, tested hundreds of images for dataset with Roboflow</li>
         <li>Classified real-time photos with Roboflow's pretrained computer vision model</li>
@@ -42,8 +42,7 @@
 
     <h2>Projects</h2>
     <hr>
-    <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a> 
-        <span class='spacer'></span> May 2025 &mdash; June 2025</h3>
+    <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a></h3>
     <p><i>Data Scientist</i></p>
     <ul>
         <li>Used Python to clean and analyze a recipe dataset from food.com</li>
@@ -53,12 +52,12 @@
 
     <h2>Education</h2>
     <hr>
-    <h3><strong>University of California, San Diego</strong> <span class='spacer'></span> Expected 2027</h3>
+    <h3>University of California, San Diego</h3>
     <ul>
         <li>Data Science, B.S</li>
         <li>Minor: Business Analytics</li>
     </ul>
-    <h3><strong>De Anza College</strong> <span class='spacer'></span> June 2022 &mdash; June 2024</h3>
+    <h3>De Anza College</h3>
     <ul>
         <li>Mathematics, AS-T</li>
         <li>GPA: 3.82</li>
