--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         favorite hobby is playing games like Valorant, MapleStory, and Hollow Knight.
     </p>
 
-    <img src = "images/bunny.jpg" alt = "floppy-eared bunny laying down">
+    <img src = "images/bunny.jpg" alt = "floppy-eared bunny laying down" width = "400" height = "600">
 </body>
 </html>
