--- a/contact/index.html
+++ b/contact/index.html
@@ -19,16 +19,19 @@
 
     <form action = "mailto:knli@ucsd.edu" method = "POST" enctype = "text/plain">
         <br>
-        <label for = "email">Email: </label>
-        <input type = "email" name = "email">
+        <label for = "email">Email:
+            <input type = "email" name = "email">
+        </label>
         <br>
         <br>
-        <label for = "subject">Subject: </label>
-        <input name = "subject">
+        <label for = "subject">Subject:
+            <input name = "subject">
+        </label>
         <br>
         <br>
-        <label for = "body">Body: </label>
-        <textarea name = "body"></textarea>
+        <label for = "body">Body:
+            <textarea name = "body"></textarea>
+        </label>
         <br>
         <br>
         <button>Submit</button>
