--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,68 @@
 
     <h1>Projects</h1>
 
-    <p>testing</p>
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid non quos nobis assumenda est porro veniam dolore suscipit natus impedit, obcaecati modi, expedita rerum enim, illum at adipisci commodi facilis?</p>
+        </article>
+        <article>
+            <h2>Nemo commodi necessitatibus adipisci.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Mollitia illo amet ipsa est earum quo sapiente vero voluptatibus adipisci assumenda culpa vitae iusto accusamus magnam quaerat dicta repudiandae debitis veniam aliquam, architecto nemo ullam, repellat placeat? Magnam, distinctio.</p>
+        </article>
+        <article>
+            <h2>Repudiandae, sit quas! Adipisci!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Nulla quidem ipsum eum obcaecati eligendi laborum aperiam nihil soluta deleniti dolorum, dolore a distinctio accusamus? Voluptatem, consequuntur, eius ut dolor commodi deserunt, possimus similique architecto sint beatae illum iure.</p>
+        </article>
+        <article>
+            <h2>Perspiciatis a nostrum ratione.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Magni aliquam voluptas velit maiores sit a nulla molestiae vero illum laudantium omnis, obcaecati deserunt similique amet quis perspiciatis accusamus quod mollitia ullam nam sequi! Magnam voluptates vel laudantium magni?</p>
+        </article>
+        <article>
+            <h2>Reiciendis temporibus distinctio numquam.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Cupiditate blanditiis quisquam modi numquam eligendi velit. Culpa aliquam, amet deserunt, pariatur officiis est optio dolor quo vel atque, porro doloribus dolorum illum? Fuga quam totam voluptatem eligendi nisi voluptate.</p>
+        </article>
+        <article>
+            <h2>Voluptates quisquam libero expedita.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Velit dolorem neque laudantium, doloremque quam unde sit officiis commodi reprehenderit dolorum ipsum blanditiis tenetur delectus facilis dolor saepe reiciendis atque eveniet eius ipsa asperiores vero corrupti? Porro, neque nobis.</p>
+        </article>
+        <article>
+            <h2>Vero, quas. Quidem, iure.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quos maxime reiciendis mollitia nostrum? Ipsum delectus enim libero inventore blanditiis doloribus, autem adipisci architecto alias, ducimus expedita assumenda cupiditate accusantium! Asperiores, sunt. Dolor quae vel, et consectetur quo incidunt.</p>
+        </article>
+        <article>
+            <h2>Quod quis earum aliquid.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Impedit ex error vitae tempora corporis necessitatibus qui fugit aut ipsum eos eum dicta quibusdam suscipit fugiat sint ipsam, delectus iste sed temporibus. Atque quisquam, error quasi voluptate animi sequi?</p>
+        </article>
+        <article>
+            <h2>Labore voluptatem incidunt placeat.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quaerat est dicta unde molestias necessitatibus, perspiciatis animi repellendus minima nesciunt laudantium provident odio debitis recusandae eveniet distinctio ullam! Hic magni aut quod ipsa nihil dolore culpa odio illo nemo.</p>
+        </article>
+        <article>
+            <h2>Neque doloribus porro amet?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Facere neque blanditiis dolores quibusdam officiis quod nam assumenda minus, tempore veniam, laborum possimus cupiditate magni. Ullam eligendi, amet fuga animi commodi optio incidunt corrupti, quisquam quia ipsam sint! At?</p>
+        </article>
+        <article>
+            <h2>Repudiandae, reprehenderit. Quis, totam.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Asperiores, nobis ad, aliquid libero explicabo veniam quibusdam velit illum odio maiores ipsa placeat possimus porro quas impedit, eveniet fuga aut tempore sunt excepturi minima? Deserunt eius adipisci inventore temporibus.</p>
+        </article>
+        <article>
+            <h2>Eum ut sapiente dolorum.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Sed magni ex reprehenderit quo veritatis culpa, placeat voluptas vel omnis. Qui molestias debitis corrupti culpa minus nesciunt, exercitationem quam maiores porro non, modi eligendi nisi omnis quis atque quae.</p>
+        </article>
+    </div>
+
 </body>
 </html>
