added section to resume.index & update css

--- a/resume/index.html
+++ b/resume/index.html
@@ -17,50 +17,59 @@
     
     <h1>Keilani Li</h1>
 
-    <h2>Experience</h2>
-    <hr>
-    <h3>Incubator Program</h3>
-    <ul>
-        <li>Compiled, trained, tested hundreds of images for dataset with Roboflow</li>
-        <li>Classified real-time photos with Roboflow's pretrained computer vision model</li>
-        <li>Utilized Twilio to send SMS notifications and images to company employees if flare is identified unlit</li>
-        <li>Deployed project into APK file with Expo</li>
-    </ul>
+    <section>
+        <h2>Experience</h2>
+        <hr>
+        <h3>Incubator Program</h3>
+        <ul>
+            <li>Compiled, trained, tested hundreds of images for dataset with Roboflow</li>
+            <li>Classified real-time photos with Roboflow's pretrained computer vision model</li>
+            <li>Utilized Twilio to send SMS notifications and images to company employees if flare is identified unlit</li>
+            <li>Deployed project into APK file with Expo</li>
+        </ul>
+    </section>
 
-    <h2>Skills</h2>
-    <hr>
-    <ul>
-        <li>Programming Languages: Python, R, SQL</li>
-        <li>Machine Learning Algorithms: supervised learning (K-Nearest Neighbors, 
-            linear regression, random forests, decision trees), unsupervised learning (clustering)</li>
-        <li>Familiarity with: AWS, Tableau, Microsoft Excel, C++, Java</li>
-        <li>Quick learner and adapter</li>
-        <li>Work well independently or in teams</li>
-        <li>Detail-oriented</li>
-        <li>Highly organized</li>
-    </ul>
+    <section>
+        <h2>Skills</h2>
+        <hr>
+        <ul>
+            <li>Programming Languages: Python, R, SQL, HTML, CSS</li>
+            <li>Machine Learning Algorithms: supervised learning (K-Nearest Neighbors, 
+                linear regression, random forests, decision trees), unsupervised learning (clustering)</li>
+            <li>Familiarity with: AWS, Tableau, Microsoft Excel, C++, Java</li>
+            <li>Quick learner and adapter</li>
+            <li>Work well independently or in teams</li>
+            <li>Detail-oriented</li>
+            <li>Highly organized</li>
+        </ul>
+    </section>
 
-    <h2>Projects</h2>
-    <hr>
-    <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a></h3>
-    <p><i>Data Scientist</i></p>
-    <ul>
-        <li>Used Python to clean and analyze a recipe dataset from food.com</li>
-        <li>Performed permutation tests on missing values and fairness</li>
-        <li>Build a Random Forests Regression model to predict recipe length based on number of steps</li>
-    </ul>
+    <section>
+        <h2>Projects</h2>
+        <hr>
+        <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a></h3>
+        <p><i>Data Scientist</i></p>
+        <ul>
+            <li>Used Python to clean and analyze a recipe dataset from food.com</li>
+            <li>Performed permutation tests on missing values and fairness</li>
+            <li>Build a Random Forests Regression model to predict recipe length based on number of steps</li>
+        </ul>
+    </section>
 
-    <h2>Education</h2>
-    <hr>
-    <h3>University of California, San Diego</h3>
-    <ul>
-        <li>Data Science, B.S</li>
-        <li>Minor: Business Analytics</li>
-    </ul>
-    <h3>De Anza College</h3>
-    <ul>
-        <li>Mathematics, AS-T</li>
-        <li>GPA: 3.82</li>
-    </ul>
+    <section>
+        <h2>Education</h2>
+        <hr>
+        <h3>University of California, San Diego</h3>
+        <ul>
+            <li>Data Science, B.S</li>
+            <li>Minor: Business Analytics</li>
+        </ul>
+        <h3>De Anza College</h3>
+        <ul>
+            <li>Mathematics, AS-T</li>
+            <li>GPA: 3.82</li>
+        </ul>
+    </section>
+    
 </body>
 </html>
