trying to add date range to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -47,7 +47,10 @@
     <section>
         <h2>Projects</h2>
         <hr>
-        <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a></h3>
+        <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a>
+            <span class="spacer"></span>
+            May 2025 &mdash; June 2025
+        </h3>
         <p><i>Data Scientist</i></p>
         <ul>
             <li>Used Python to clean and analyze a recipe dataset from food.com</li>
@@ -70,6 +73,6 @@
             <li>GPA: 3.82</li>
         </ul>
     </section>
-    
+
 </body>
 </html>
