--- a/resume/index.html
+++ b/resume/index.html
@@ -15,7 +15,7 @@
         <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
     </nav>
     
-    <h1>Keilani Li</h1>
+    <h1>Resume</h1>
 
     <section>
         <h2>Experience</h2>
