What is goin ooonnnn

--- a/resume/index.html
+++ b/resume/index.html
@@ -50,12 +50,11 @@
     <section class = "projects">
         
         <h2>Projects</h2>
-        <br>
+        
         <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a>
-            <span class="spacer"></span>
-            May 2025 &mdash; June 2025
+            <span class="date">May 2025 &mdash; June 2025</span>
         </h3>
-        <br>
+
         <p><i>Data Scientist</i></p>
         <ul>
             <li>Used Python to clean and analyze a recipe dataset from food.com</li>
