--- a/resume/index.html
+++ b/resume/index.html
@@ -52,10 +52,12 @@
         <h2>Projects</h2>
         
         <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a>
-            <span class="date">May 2025 &mdash; June 2025</span>
+            <span class="spacer"></span>
+            May 2025 &mdash; June 2025
         </h3>
 
-        <p><i>Data Scientist</i></p>
+        <h4><i>Data Scientist</i></h4>
+        
         <ul>
             <li>Used Python to clean and analyze a recipe dataset from food.com</li>
             <li>Performed permutation tests on missing values and fairness</li>
