--- a/resume/index.html
+++ b/resume/index.html
@@ -56,7 +56,7 @@
             May 2025 &mdash; June 2025
         </h3>
 
-        <h4><i>Data Scientist</i></h4>
+        <p>Data Scientist</p>
         
         <ul>
             <li>Used Python to clean and analyze a recipe dataset from food.com</li>
