--- a/resume/index.html
+++ b/resume/index.html
@@ -51,7 +51,7 @@
         
         <h2>Projects</h2>
         
-        <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a> | <i>Data Scientist</i>
+        <h3>Recipe Length Analysis
             <span class="spacer"></span>
             May 2025 &mdash; June 2025
         </h3>
