--- a/resume/index.html
+++ b/resume/index.html
@@ -24,7 +24,7 @@
             <span class="spacer"></span>
             Sept 2022 &mdash; Nov 2022
         </h3>
-        
+
         <ul>
             <li>Compiled, trained, tested hundreds of images for dataset with Roboflow</li>
             <li>Classified real-time photos with Roboflow's pretrained computer vision model</li>
@@ -51,10 +51,7 @@
     <section class = "projects">
         <h2>Projects</h2>
         
-        <h3>Recipe Length Analysis
-            <span class="spacer"></span>
-            May 2025 &mdash; June 2025
-        </h3>
+        <h3>wat is going on</h3>
 
         <ul>
             <li>Used Python to clean and analyze a recipe dataset from food.com</li>
