--- a/resume/index.html
+++ b/resume/index.html
@@ -48,7 +48,7 @@
         </ul>
     </section>
 
-    <section class = "projects">
+    <section class = "projs">
         <h2>Projects</h2>
         
         <h3>wat is going on</h3>
