--- a/resume/index.html
+++ b/resume/index.html
@@ -51,7 +51,10 @@
     <section class = "projs">
         <h2>Projects</h2>
         
-        <h3>wat is going on</h3>
+        <h3><a href = "https://keil4ni.github.io/recipe-analysis/">Recipe Length Analysis</a>
+            <span class="spacer"></span>
+            May 2025 &mdash; June 2025
+        </h3>
 
         <ul>
             <li>Used Python to clean and analyze a recipe dataset from food.com</li>
