--- a/resume/index.html
+++ b/resume/index.html
@@ -41,10 +41,8 @@
             <li>Machine Learning Algorithms: supervised learning (K-Nearest Neighbors, 
                 linear regression, random forests, decision trees), unsupervised learning (clustering)</li>
             <li>Familiarity with: AWS, Tableau, Microsoft Excel, C++, Java</li>
-            <li>Quick learner and adapter</li>
-            <li>Work well independently or in teams</li>
-            <li>Detail-oriented</li>
-            <li>Highly organized</li>
+            <li>Soft Skills: Quick learner and adapter, work well independently or in teams, 
+                detail-oriented, highly organized, strong communicator</li>
         </ul>
     </section>
 
