--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
         <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
         <a href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
-        <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
+        <a class = "current" href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
     </nav>
     
     <h1>Resume</h1>
