added current class to contact & homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href = "https://keil4ni.github.io/portfolio/">Home</a>
+        <a class = "current" href = "https://keil4ni.github.io/portfolio/">Home</a>
         <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
         <a href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
