removed current class from All links.

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
     <nav>
         <a href = "https://keil4ni.github.io/portfolio/">Home</a>
         <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
-        <a class = "current" href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
+        <a href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
         <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
     </nav>
