--- a/projects/index.html
+++ b/projects/index.html
@@ -8,13 +8,13 @@
     <script type = "module" src = "../global.js"></script>
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <a href = "https://keil4ni.github.io/portfolio/">Home</a>
         <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
         <a href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
         <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
         <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
-    </nav>
+    </nav> -->
 
     <h1>Projects</h1>
 
