--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script type = "module" src = "global.js"></script>
 </head>
 <body>
+
+    <label for = "theme">Theme:
+        <select>
+            <option value = "light dark">Automatic</option>
+            <option value = "light">Light</option>
+            <option value = "dark">Dark</option>
+        </select>
+    </label>
+    
     <!-- <nav>
         <a href = "https://keil4ni.github.io/portfolio/">Home</a>
         <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
