--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-    <label for = "theme">Theme:
+    <label class = "color-scheme">Theme:
         <select>
             <option value = "light dark">Automatic</option>
             <option value = "light">Light</option>
             <option value = "dark">Dark</option>
         </select>
     </label>
-    
+
     <!-- <nav>
         <a href = "https://keil4ni.github.io/portfolio/">Home</a>
         <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
