--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-    <label class = "color-scheme">Theme:
+    <!-- <label class = "color-scheme">Theme:
         <select>
             <option value = "light dark">Automatic</option>
             <option value = "light">Light</option>
             <option value = "dark">Dark</option>
         </select>
-    </label>
+    </label> -->
 
     <!-- <nav>
         <a href = "https://keil4ni.github.io/portfolio/">Home</a>
