--- a/contact/index.html
+++ b/contact/index.html
@@ -32,7 +32,9 @@
             <textarea name = "body"></textarea>
         </label>
 
-        <button>Submit</button>
+        <label for = "button">
+            <button>Submit</button>
+        </label>
     </form>
 </body>
 </html>
