--- a/contact/index.html
+++ b/contact/index.html
@@ -33,7 +33,7 @@
         </label>
 
         <label for = "button">
-            <button>Submit</button>
+            <button></button>
         </label>
     </form>
 </body>
