--- a/contact/index.html
+++ b/contact/index.html
@@ -32,7 +32,7 @@
             <textarea name = "body"></textarea>
         </label>
 
-        <button></button>
+        <button>Submit</button>
     </form>
 </body>
 </html>
