fixing contact form

--- a/contact/index.html
+++ b/contact/index.html
@@ -18,11 +18,11 @@
 
     <h1>Contact</h1>
 
-    <form action = "mailto:knli@ucsd.edu" method = "POST" enctype = "text/plain">
+    <form action = "mailto:knli@ucsd.edu" method = "GET" enctype = "text/plain">
         
-        <label for = "email">Email:
+        <!-- <label for = "email">Email:
             <input type = "email" name = "email">
-        </label>
+        </label> -->
 
         <label for = "subject">Subject:
             <input name = "subject">
