--- a/resume/index.html
+++ b/resume/index.html
@@ -58,7 +58,7 @@
         <ul>
             <li>Used Python to clean and analyze a recipe dataset from food.com</li>
             <li>Performed permutation tests on missing values and fairness</li>
-            <li>Build a Random Forests Regression model to predict recipe length based on number of steps</li>
+            <li>Built a regression model to predict recipe length based on number of steps</li>
         </ul>
     </section>
 
