--- a/resume/index.html
+++ b/resume/index.html
@@ -26,10 +26,12 @@
             Sept 2022 &mdash; Nov 2022
         </h3>
 
+        <p><i>Machine Learning Engineer</i></p>
+
         <ul>
             <li>Compiled, trained, tested hundreds of images for dataset with Roboflow</li>
             <li>Classified real-time photos with Roboflow's pretrained computer vision model</li>
-            <li>Utilized Twilio to send SMS notifications and images to company employees if flare is identified unlit</li>
+            <li>Utilized Twilio to send SMS notifications and real-time images</li>
             <li>Deployed project into APK file with Expo</li>
         </ul>
     </section>
@@ -54,6 +56,8 @@
             <span class="spacer"></span>
             May 2025 &mdash; June 2025
         </h3>
+
+        <p><i>Data Scientist</i></p>
 
         <ul>
             <li>Used Python to clean and analyze a recipe dataset from food.com</li>
