--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keilani Li m&dash; Personal site & Portfolio</title>
+    <title>Keilani Li &mdash; Personal site & Portfolio</title>
     <link rel = "stylesheet" href = "style.css">
     <script type = "module" src = "global.js"></script>
 </head>
