--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Keilani Li &mdash; Personal site & Portfolio</title>
     <link rel = "stylesheet" href = "style.css">
     <script type = "module" src = "global.js"></script>
+    <script type = "module" src = "index.js" defer></script>
 </head>
 <body>
 
@@ -32,5 +33,14 @@
     </p>
 
     <img src = "images/bunny.jpg" alt = "floppy-eared bunny laying down" width = "400" height = "250">
+
+    <h2>Latest Projects</h2>
+    <div class = "projects">
+        <!-- dynamically added content will appear here -->
+    </div>
+
+    <div id = "profile-stats">
+        <!-- content here -->
+    </div>
 </body>
 </html>
