trying to fix projs

--- a/projects/index.html
+++ b/projects/index.html
@@ -17,10 +17,10 @@
         <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
     </nav> -->
 
-    <h1>Projects</h1>
+    <h1 class = "projects-title">Projects</h1>
 
     <div class="projects">
-        
+<!--         
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid non quos nobis assumenda est porro veniam dolore suscipit natus impedit, obcaecati modi, expedita rerum enim, illum at adipisci commodi facilis?</p>
@@ -68,7 +68,7 @@
             <h2>Eum ut sapiente dolorum.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Sed magni ex reprehenderit quo veritatis culpa, placeat voluptas vel omnis. Qui molestias debitis corrupti culpa minus nesciunt, exercitationem quam maiores porro non, modi eligendi nisi omnis quis atque quae.</p>
-        
+         -->
     </div>
 
 </body>
