--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,7 @@
 
     <h1 class = "projects-title">Projects</h1>
 
-    <div class="projects">
+    <div class="projects"></div>
 <!--         
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
@@ -69,7 +69,7 @@
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Sed magni ex reprehenderit quo veritatis culpa, placeat voluptas vel omnis. Qui molestias debitis corrupti culpa minus nesciunt, exercitationem quam maiores porro non, modi eligendi nisi omnis quis atque quae.</p>
          -->
-    </div>
+
 
 </body>
 </html>
