--- a/contact/index.html
+++ b/contact/index.html
@@ -25,11 +25,11 @@
         </label> -->
 
         <label for = "subject">Subject:
-            <input name = "subject" placeholder = "example@gmail.com">
+            <input name = "subject" placeholder = "Hello...">
         </label>
 
         <label for = "body">Message:
-            <textarea name = "body" placeholder = "Hello, my name is..."></textarea>
+            <textarea name = "body" placeholder = "Your message..."></textarea>
         </label>
 
         <button>Submit</button>
