--- a/contact/index.html
+++ b/contact/index.html
@@ -32,7 +32,7 @@
             <textarea name = "body" placeholder = "Your message..."></textarea>
         </label>
 
-        <button>Submit</button>
+        <button>Send</button>
     </form>
 
     <script>
