--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
     <h1>Keilani Li</h1>
 
-    <p>Hi! I am a 4th year data science major at UC San Diego. I like bunnies and capybaras, and my
-        favorite hobby is playing games like Valorant, MapleStory, and Hollow Knight.
+    <p> Hello! I am a 4th year data science major at UC San Diego. I enjoy creating data visualizations
+        while doing exploratory data analysis (EDA). A few of my interests include gaming, pixel art,
+        and building custom keyboards. 
     </p>
 
     <img src = "images/bunny.jpg" alt = "floppy-eared bunny laying down" width = "400" height = "250">
