--- a/projects/index.html
+++ b/projects/index.html
@@ -20,6 +20,11 @@
     <h1 class = "projects-title">Projects</h1>
 
     <div class="projects"></div>
+
+    <svg id="projects-plot" viewBox="-50 -50 100 100">
+        <circle cx="0" cy="0" r="50" fill="red" />
+    </svg>
+
 <!--         
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
