--- a/projects/index.html
+++ b/projects/index.html
@@ -19,11 +19,13 @@
 
     <h1 class = "projects-title">Projects</h1>
 
+    <svg id = "projects-pie-plot" viewBox = "-50 -50 100 100">
+        <!-- code without d3 arc -->
+        <!-- <path d="M -50 0 A 50 50 0 0 1 50 0 A 50 50 0 0 1 -50 0" fill="red" /> -->
+    </svg>
+
     <div class="projects"></div>
 
-    <svg id="projects-plot" viewBox="-50 -50 100 100">
-        <circle cx="0" cy="0" r="50" fill="red" />
-    </svg>
 
 <!--         
             <h2>Lorem ipsum dolor sit.</h2>
