--- a/projects/index.html
+++ b/projects/index.html
@@ -19,10 +19,16 @@
 
     <h1 class = "projects-title">Projects</h1>
 
-    <svg id = "projects-pie-plot" viewBox = "-50 -50 100 100">
-        <!-- code without d3 arc -->
-        <!-- <path d="M -50 0 A 50 50 0 0 1 50 0 A 50 50 0 0 1 -50 0" fill="red" /> -->
-    </svg>
+    <div class = "container">
+        <svg id = "projects-pie-plot" viewBox = "-50 -50 100 100">
+            <!-- code without d3 arc -->
+            <!-- <path d="M -50 0 A 50 50 0 0 1 50 0 A 50 50 0 0 1 -50 0" fill="red" /> -->
+        </svg>
+        <ul class = "legend">
+            <!-- stuff -->
+        </ul>
+    </div>
+
 
     <div class="projects"></div>
 
