--- a/projects/index.html
+++ b/projects/index.html
@@ -20,6 +20,14 @@
     <h1 class = "projects-title">Projects</h1>
 
     <div class = "container">
+
+        <input
+            class = "searchBar"
+            type = "search"
+            aria-label = "Search projects"
+            placeholder = "Search projects..."
+        />
+
         <svg id = "projects-pie-plot" viewBox = "-50 -50 100 100">
             <!-- code without d3 arc -->
             <!-- <path d="M -50 0 A 50 50 0 0 1 50 0 A 50 50 0 0 1 -50 0" fill="red" /> -->
@@ -27,6 +35,7 @@
         <ul class = "legend">
             <!-- stuff -->
         </ul>
+
     </div>
 
 
