--- a/projects/index.html
+++ b/projects/index.html
@@ -9,30 +9,15 @@
     <script type = "module" src = "projects.js"></script>
 </head>
 <body>
-    <!-- <nav>
-        <a href = "https://keil4ni.github.io/portfolio/">Home</a>
-        <a href = "https://keil4ni.github.io/portfolio/projects">Projects</a>
-        <a href = "https://keil4ni.github.io/portfolio/contact">Contact</a>
-        <a href = "https://github.com/keil4ni" target = "_blank">GitHub</a>
-        <a href = "https://keil4ni.github.io/portfolio/resume">Resume</a>
-    </nav> -->
-
     <h1 class = "projects-title">Projects</h1>
 
     <div class = "container">
 
-        <input
-            class = "searchBar"
-            type = "search"
-            aria-label = "Search projects"
-            placeholder = "Search projects..."
-        />
+        <input class = "searchBar" type = "search" aria-label = "Search projects" placeholder = "Search projects..."/>
 
         <svg id = "projects-pie-plot" viewBox = "-50 -50 100 100"></svg>
-        <ul class = "legend">
-            <!-- stuff -->
-        </ul>
-
+        <ul class = "legend"></ul>
+        
     </div>
 
     <div class="projects"></div>
