--- a/projects/index.html
+++ b/projects/index.html
@@ -12,12 +12,9 @@
     <h1 class = "projects-title">Projects</h1>
 
     <div class = "container">
-
         <input class = "searchBar" type = "search" aria-label = "Search projects" placeholder = "Search projects..."/>
-
-        <svg id = "projects-pie-plot" viewBox = "-50 -50 100 100"></svg>
+        <svg id = "projects-plot" viewBox = "-50 -50 100 100"></svg>
         <ul class = "legend"></ul>
-        
     </div>
 
     <div class="projects"></div>
