--- a/meta/index.html
+++ b/meta/index.html
@@ -6,10 +6,15 @@
     <title>Meta</title>
     <link rel = "stylesheet" href = "../style.css">
     <script type = "module" src = "../global.js"></script>
-    <script type = "module" src = "projects.js"></script>
+    <script type = "module" src = "main.js"></script>
 </head>
 <body>
     <h1>Meta</h1>
-    <p>Hello this is a placeholder</p>
+
+    <div id="stats"></div>
+
+    <h2>Commits by time of day</h2>
+    <div id="chart"></div>
+
 </body>
 </html>
