--- a/meta/index.html
+++ b/meta/index.html
@@ -13,7 +13,7 @@
 
     <div id="stats"></div>
 
-    <dl id="commit-tooltip" class="info tooltip" hidden>
+    <dl id="commit-tooltip" class="info tooltip">
         <dt>Commit</dt>
         <dd>
             <a href="" id="commit-link" target="_blank"></a>
