--- a/meta/index.html
+++ b/meta/index.html
@@ -36,5 +36,8 @@
     <h2>Commits by time of day</h2>
     <div id="chart"></div>
 
+    <p id="selection-count">No commits selected</p>
+    <dl id="language-breakdown" class="stats"></dl>
+
 </body>
 </html>
