--- a/meta/index.html
+++ b/meta/index.html
@@ -33,7 +33,7 @@
         <dd id="commit-lines"></dd>
     </dl>
 
-    <h2>Commits by time of day</h2>
+    <h2 style="border-bottom: none; text-align: center;">Commits by time of day</h2>
     <div id="chart"></div>
 
     <p id="selection-count">No commits selected</p>
