--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <h1>Keilani Li</h1>
 
-    <p> Hello! I am a 4th year data science major at UC San Diego. I enjoy creating data visualizations
-        while doing exploratory data analysis (EDA). A few of my interests include gaming, pixel art,
-        and building custom keyboards. 
+    <p> 
+        Hello! I am a 2nd year transfer student, data science major, and business analytics minor at UC San Diego. 
+        I enjoy creating data visualizations while doing exploratory data analysis (EDA). A few of my interests 
+        include gaming, journaling, crocheting, digital art, pixel art, and building custom keyboards. 
     </p>
 
     <img src = "images/bunny.jpg" alt = "floppy-eared bunny laying down" width = "400" height = "250">
