--- a/meta/index.html
+++ b/meta/index.html
@@ -27,20 +27,6 @@
         <em id="any-time">(any time)</em>
     </div>
 
-    <dl id="files">
-    <!-- we want the following structure for each file:
-    <div>
-        <dt>
-            <code>{file.name}</code>
-            <small>{file.lines.length} lines</small>
-        </dt>
-        <dd>
-            <div class="line"></div>
-        </dd>
-    </div>
-    -->
-    </dl>
-
     <div id="stats"></div>
 
     <dl id="commit-tooltip" class="info tooltip">
@@ -63,13 +49,18 @@
         <dd id="commit-lines"></dd>
     </dl>
 
-    <h2 style="border-bottom: none; text-align: center;">Commits by time of day</h2>
-    <div id="chart"></div>
+    <div id="scrolly-1">
+        <div id="scatter-story"></div>
+            <div id="scatter-plot">
+                <h2 style="border-bottom: none; text-align: center;">Commits by time of day</h2>
+                <div id="chart"></div>
 
-    <p id="selection-count">No commits selected</p>
-    <dl id="language-breakdown" class="stats"></dl>
+                <p id="selection-count">No commits selected</p>
+                <dl id="language-breakdown" class="stats"></dl>
 
-    <dl id="files"></dl>
+                <dl id="files"></dl>
+            </div>
+    </div>
 
 </body>
 </html>
