--- a/resume/index.html
+++ b/resume/index.html
@@ -13,6 +13,20 @@
     <section class = "experience">
         <h2>Experience</h2>
         
+        <h3>Handshake AI
+            <span class="spacer"></span>
+            Oct 2025 &mdash; Present
+        </h3>
+
+        <p>Content Quality Analyst Contractor</p>
+
+        <ul>
+            <li>Collaborated with leading researchers to refine the capabilities of Large Language Models (LLMs)</li>
+            <li>Contributed to testing, evaluation, and contextual improvements in AI systems</li>
+            <li>Provided detailed feedback and scoring on confidential AI projects</li>
+        </ul>
+
+
         <h3>Incubator Program
             <span class="spacer"></span>
             Sept 2022 &mdash; Nov 2022
@@ -37,7 +51,7 @@
                 linear regression, random forests, decision trees), unsupervised learning (clustering)</li>
             <li>Familiarity with: AWS, Tableau, Microsoft Excel, C++, Java</li>
             <li>Soft Skills: Quick learner and adapter, work well independently or in teams, 
-                detail-oriented, highly organized, strong communicator</li>
+                strong communicator, detail-oriented, highly organized</li>
         </ul>
     </section>
 
